--- a/_macros/salt.jinja
+++ b/_macros/salt.jinja
@@ -448,7 +448,8 @@ update-makinastates-{{ data.name }}-reqs:
     - require_in:
       - mc_proxy: dummy-pre-{{ data.name }}-service-restart
 
-{% for i in ['docker-py',
+{% for i in ['ansible',
+             'docker-py',
              'salt',
              'salttesting'] %}
 update-makinastates-{{ data.name }}-git-reqs-{{i}}:
