remove useless macros

--- a/salt/makina-states/_macros/funcs.jinja
+++ b/salt/makina-states/_macros/funcs.jinja
@@ -1,36 +1,1 @@
-{#-
-# common macros
-#
-# Current graph of the macros inheritance:
-#
-#               |
-#               |
-#               |
-#               |____________________________
-#                           |                |
-#                    nodetypes.jinja         |
-#                      |        |    controllers.jinja
-#                      |        |            |
-#                      |        |            |
-#        localsettings.jinja    |            |
-#          |               |____|            |
-#          |                    |            |
-#          |           services.jinja        |
-#          |                                 |
-#          |_________________________________|
-#
-#
-#
-#  to break the controllers/nodetypes cycle;
-#  at bootstrap time, we build first nodetypes then
-#  controllers
-#}
-{# DEPRECATED but never ever remove this file to not break api v1#}
-{% macro proxy(name, text='') %}
-{{name}}:
-  mc_proxy.hook:
-    - name: {{name}}
-{{text}}
-{% endmacro %}
-{% set dummy = proxy %}
-# vim:set nofoldenable:
+h.jinja
