--- a/salt/makina-states/localsettings/ssl/macros.jinja
+++ b/salt/makina-states/localsettings/ssl/macros.jinja
@@ -27,8 +27,8 @@
       - mc_proxy: ssl-certs-post-hook
 {% endmacro %}
 {% macro install_certificate(
-    cert, key=none, suf='', trust=true, sinfos=None) %}
-{%- set ssl_infos = salt['mc_ssl.get_cert_infos'](cert, key, sinfos=sinfos) %}
+    cert, key=none, suf='', trust=true, sinfos=None, gen=False) %}
+{%- set ssl_infos = salt['mc_ssl.get_cert_infos'](cert, key, gen=True, sinfos=sinfos) %}
 {%- set cn = ssl_infos.cn %}
 {%- set cert = ssl_infos.cert_data[0] %}
 {%- set key = ssl_infos.cert_data[1] or '' %}
@@ -94,3 +94,4 @@ cpt-cert-{{ssl_infos.cn}}-only{{suf}}:
     - contents: |
                 {{cert|indent(16)}}
 {% endmacro %}
+{% set install_cert = install_certificate %}
